--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^7.1.12"
     },
     "dependencies": {
+        "googleapis": "^166.0.0",
         "sweetalert2": "^11.26.2"
     }
 }
